--- a/Infinite_Shel.ipynb
+++ b/Infinite_Shel.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyMGKUg2ELAOl8e+OyfhdCP6",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNbl1xR9Jspp58HLijcokaI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,35 +105,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "JjT8tGr9Ef0m"
       },
       "outputs": [],
       "source": [
-        "# GPT_CONFIG_128M = {\n",
-        "#     \"tokenizer\": \"gpt2\",    # Tokenizer\n",
-        "#     \"vocab_size\": 50257,    # Vocabulary size\n",
-        "#     \"n_layers\": 12,         # Number of layers\n",
-        "#     \"n_heads\": 12,          # Number of attention heads\n",
-        "#     \"emb_dim\": 768,         # Embedding dimension\n",
-        "#     \"context_len\": 1024,    # Context length\n",
-        "#     \"drop_rate\": 0.1,       # Dropout rate\n",
-        "#     \"qkv_bias\": False,      # Query-Key-Value bias\n",
-        "#     \"batch_size\": 32,       # Batch size\n",
-        "# }\n",
-        "\n",
         "GPT_CONFIG_128M = {\n",
         "    \"tokenizer\": \"gpt2\",    # Tokenizer\n",
         "    \"vocab_size\": 50257,    # Vocabulary size\n",
-        "    \"n_layers\": 4,         # Number of layers\n",
-        "    \"n_heads\": 4,          # Number of attention heads\n",
-        "    \"emb_dim\": 256,         # Embedding dimension\n",
+        "    \"n_layers\": 12,         # Number of layers\n",
+        "    \"n_heads\": 12,          # Number of attention heads\n",
+        "    \"emb_dim\": 768,         # Embedding dimension\n",
         "    \"context_len\": 256,    # Context length\n",
         "    \"drop_rate\": 0.1,       # Dropout rate\n",
         "    \"qkv_bias\": False,      # Query-Key-Value bias\n",
-        "    \"batch_size\": 16,       # Batch size\n",
-        "}"
+        "}\n",
+        "\n",
+        "# GPT_CONFIG_128M = {\n",
+        "#     \"tokenizer\": \"gpt2\",    # Tokenizer\n",
+        "#     \"vocab_size\": 50257,    # Vocabulary size\n",
+        "#     \"n_layers\": 4,         # Number of layers\n",
+        "#     \"n_heads\": 4,          # Number of attention heads\n",
+        "#     \"emb_dim\": 256,         # Embedding dimension\n",
+        "#     \"context_len\": 256,    # Context length\n",
+        "#     \"drop_rate\": 0.1,       # Dropout rate\n",
+        "#     \"qkv_bias\": False,      # Query-Key-Value bias\n",
+        "#     \"batch_size\": 16,       # Batch size\n",
+        "# }"
       ]
     },
     {
@@ -481,16 +481,16 @@
     {
       "cell_type": "code",
       "source": [
-        "def load_data(cfg, data, tokenizer):\n",
+        "def load_data(cfg, data, tokenizer, batch_size):\n",
         "    dataset = Dataset(data, tokenizer, context_size=cfg[\"context_len\"])\n",
-        "    dataloader = dataset.load_data(batch_size=cfg[\"batch_size\"], shuffle=True)\n",
+        "    dataloader = dataset.load_data(batch_size, shuffle=True)\n",
         "    #iter_dataloader = iter(dataloader)\n",
         "    return dataloader"
       ],
       "metadata": {
         "id": "J6ZWiD7hKUKV"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -513,7 +513,7 @@
       "metadata": {
         "id": "AfVxjSBqOWJY"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -528,16 +528,16 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_val_split(cfg, data, tokenizer):\n",
+        "def train_val_split(cfg, data, tokenizer, batch_size):\n",
         "  train_data, val_data = split_data(data)\n",
-        "  train_dataloader = load_data(cfg, train_data, tokenizer)\n",
-        "  val_dataloader = load_data(cfg, val_data, tokenizer)\n",
+        "  train_dataloader = load_data(cfg, train_data, tokenizer, batch_size)\n",
+        "  val_dataloader = load_data(cfg, val_data, tokenizer, batch_size)\n",
         "  return train_dataloader, val_dataloader"
       ],
       "metadata": {
         "id": "27Fuh9cgOvgD"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -739,20 +739,19 @@
       "source": [
         "cfg = GPT_CONFIG_128M\n",
         "tokenizer = tiktoken.get_encoding(cfg[\"tokenizer\"])\n",
-        "#data = sidewalk\n",
-        "data = verdict\n",
+        "data = verdict #sidewalk\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "epochs = 10\n",
         "eval_freq = 100\n",
         "eval_iter = 5\n",
-        "max_tokens = 100\n",
-        "#start_context = \"Her Name is Murphy\"\n",
-        "start_context = \"Every effort moves you\""
+        "max_tokens = 10\n",
+        "start_context = \"Every effort moves you\"\n",
+        "batch_size = 8"
       ],
       "metadata": {
         "id": "HJvtCzViLUKb"
       },
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -772,7 +771,7 @@
       "metadata": {
         "id": "tpjYdhdMLXq0"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -792,7 +791,7 @@
       "metadata": {
         "id": "x9rZf9mvMD03"
       },
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -807,12 +806,12 @@
     {
       "cell_type": "code",
       "source": [
-        "train, val = train_val_split(cfg, data, tokenizer)"
+        "train, val = train_val_split(cfg, data, tokenizer, batch_size)"
       ],
       "metadata": {
         "id": "BHrZbjj4MdBh"
       },
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -849,14 +848,12 @@
         "        track_tokens_seen.append(tokens_seen)\n",
         "        print(f\"Epoch: {epoch + 1}, Step: {global_step:06d}, Train Loss: {train_loss:.3f}, Val Loss: {val_loss:.3f}\")\n",
         "        print(generate_sample(model, tokenizer, start_context, max_tokens , device))\n",
-        "      if i % 100 == 0:\n",
-        "          print(f\"Batch: {i}\")\n",
         "  return train_losses, val_losses, track_tokens_seen"
       ],
       "metadata": {
         "id": "1Gi07O4jYzox"
       },
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -865,89 +862,11 @@
         "train_losses, val_losses, track_tokens_seen = train_model(model, train, val, optimizer, epochs, device, eval_freq, eval_iter, start_context, tokenizer)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
         "collapsed": true,
-        "id": "TiigHs72Tb52",
-        "outputId": "c085bad1-cc23-4c12-eebe-a74974811d32"
+        "id": "TiigHs72Tb52"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch: 1, Step: 000000, Train Loss: 10.658, Val Loss: 10.765\n",
-            "Every effort moves you understood adhesive (* To deficits chantsgencyDs debacle Victoriaucha Katie obedientarsity Extras Canalrr infect ECO celebrationdraw bandwagon129 overtly74 Slavearius slightest point Py SpartMaream patrol belonging decl stren sinking blessings crucdidn Hunts grill Parliamentlast sd Ex downt Soy friendshipsotor toughestalist improve orcherisome Olympicaspberryjob Arielrosse individually smokers heartbreakingbrandawk trivial DI McLatorium volcano veter believers screendriven tcp disrupt Paladin objections complicit caused outl murkyracticaljam delusion THESE026 Chang Font Impact Caesaractivation fee Nek attained extinguished Sor IncludesMale\n",
-            "Batch: 0\n",
-            "Epoch: 1, Step: 000100, Train Loss: 1.918, Val Loss: 6.333\n",
-            "Every effort moves you say: \"lift him deprecatingly, poor Stroud get it. . She believed in the price of the real business of the cigars you know; but his last the last he wasian point how he had Miss Croft, failed pastels. Only he said, on--his fair sitters had been re under similar it all--so handsome, it.\n",
-            "\n",
-            "Mrs.\n",
-            "\"Has he managed to the price of the amplest,\" as which, I felt able to me\n",
-            "Batch: 100\n",
-            "Epoch: 1, Step: 000200, Train Loss: 0.461, Val Loss: 7.438\n",
-            "Every effort moves you know.\"\n",
-            "It's the Stroud--as you even domestic economy. Was stay.\"\n",
-            "\n",
-            "Gisburn. Thwings who back the negat it happened,\" she said--and it didn't seen a small picture. \"The desultBy Jove--the first time, you know you to now it's tears I went it's bal of his eyes. Thwing's the same quality as he had forgotten to wonder! But Mrs. Gisburn said. Gisburn--\n",
-            "Batch: 200\n",
-            "Batch: 0\n",
-            "Epoch: 2, Step: 000300, Train Loss: 0.130, Val Loss: 8.331\n",
-            "Every effort moves you canains, I had it over the usual platitudes about to think he was one of the glory of the kind that are left behind. By Jove, and he _was_ left behind--because he had come to let ourselves be swept along or go under, but he was high above the current--rather moved, as you say.\n",
-            "\n",
-            "\"Well, I went off to the house in my most egregious mood--rather moved, at the pathos of poor Stroud's career of\n",
-            "Batch: 100\n",
-            "Epoch: 2, Step: 000400, Train Loss: 0.042, Val Loss: 8.566\n",
-            "Every effort moves you know.\"\n",
-            "\n",
-            "His ridiculous modesty--or thought she said persuasively to my hostess: \"Yes, you know.\n",
-            "\n",
-            "She glanced out almost timorously at the terrace where her husband, lounging in a hooded chair, had lit a cigar and drawn the Russian deer curiosity was high above the Russian deerhound's head between his knees.\n",
-            "\n",
-            "\"Well, come while he's not looking,\" she said, with a laugh that tried to hide her nervousness;\n",
-            "Batch: 200\n",
-            "Epoch: 2, Step: 000500, Train Loss: 0.034, Val Loss: 8.649\n",
-            "Every effort moves you know.\"\n",
-            "\n",
-            "She glanced out almost timorously at the terrace where her husband, instinctively.\n",
-            "\n",
-            "Well, lounging in a hooded chair, had lit a cigar and drawn the Russian deerhound's head between his frame.\n",
-            "\n",
-            "\"Well, come while he's not looking,\" she said, with a laugh that tried to hide her nervousness; and I followed her between the marble Emperors of the hall, and up the wide stairs with terra-cotta n\n",
-            "Batch: 0\n",
-            "Epoch: 3, Step: 000600, Train Loss: 0.041, Val Loss: 8.932\n",
-            "Every effort moves you know.\"\n",
-            "\n",
-            "She glanced out almost timorously at the terrace where her husband, lounging in a hooded chair, had lit a cigar and drawn the Russian deerhound's head between his knees.\n",
-            "\n",
-            "\"Well, come while he's not looking,\" she said, with a laugh that tried to hide her nervousness; and I followed her between the marble Emperors of the hall, and up the wide stairs with terra-cotta nymphs poised among flowers at\n",
-            "Batch: 100\n",
-            "Epoch: 3, Step: 000700, Train Loss: 0.024, Val Loss: 9.028\n",
-            "Every effort moves you know you know you know. He says they're not fit to have about; he's sent them all away except one--my portrait--and that I have to keep upstairs.\"\n",
-            "\n",
-            "His ridiculous modesty--Jack's modesty about his pictures? My curiosity was growing like the bean-stalk. I said persuasively to my hostess: \"I must really see your portrait, you know.\"\n",
-            "\n",
-            "She glanced out almost timorously at the terrace where her husband, lounging\n",
-            "Batch: 200\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-62-4247f6d03254>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack_tokens_seen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_freq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_context\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-61-c16c1df49723>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, train_loader, val_loader, optimizer, num_epochs, device, eval_freq, eval_iter, start_context, tokenizer)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m       \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m       \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_loss_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m       \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m       \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-17-5f1d504ad241>\u001b[0m in \u001b[0;36mcalc_loss_batch\u001b[0;34m(model, x, y, device)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcalc_loss_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m# B, T, C = logits.shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# loss = torch.nn.functional.cross_entropy(logits.view(B*T, C), targets.view(B*T))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
